--- a/.htaccess
+++ b/.htaccess
@@ -6,6 +6,7 @@
 
 
 RewriteEngine On
+#RewriteBase /tmp/backend/backend_ci_instagram/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php/$1 [L]
